<resources>
    <string name="app_name">Compra Meli</string>
    <string name="facebook_app_id">514087719361269</string>
    <string name="fb_login_protocol_scheme">fb514087719361269</string>
    <string name="google_geo_api_key">AIzaSyCF2ZPPRewPnwYjCAKyadFTfK06CxkwaLE</string>
    <!-- ========================================== -->
    <!--                 Splash                     -->
    <!-- ========================================== -->
    <string name="splash_error_session_check_title">Error!</string>
    <string name="splash_error_session_check_message">Hubieron problemas para validar la session!\nVuelva a intentarlo mas tarde</string>
    <!-- ========================================== -->
    <!--                  Auth                      -->
    <!-- ========================================== -->
    <!--                  Register                  -->
    <string name="auth_register_title1">Registrate</string>
    <string name="auth_register_title2">usando la opcion que mas te guste</string>
    <string name="auth_register_mail">Correo</string>
    <string name="auth_register_facebook">Facebook</string>
    <string name="auth_register_create">CREAR</string>
    <string name="auth_register_form_account">Cuenta</string>
    <string name="auth_register_form_user">Email</string>
    <string name="auth_register_form_pass">Contraseña</string>
    <string name="auth_register_form_confirm_pass">Confirmar Contraseña</string>
    <string name="auth_register_form_personal_data">Datos del usuario</string>
    <string name="auth_register_form_name">Nombre</string>
    <string name="auth_register_form_last_name">Apellido</string>
    <string name="auth_register_error_title">Escribiste bien?</string>
    <string name="auth_register_error_message_uncomplete_data">Por favor, completa todos tus datos antes de continuar</string>
    <string name="auth_register_error_message_confirm_password">La confirmacion de tu contraseña no coincide con la misma. \n Ingresa tus datos nuevamente!</string>
    <string name="auth_register_error_message_password_length">La contraseña debe ser igual o mayor a 6 caracteres. \n Ingresa tus datos nuevamente!</string>
    <!--                 Sign in                    -->
    <string name="auth_sign_in_title_1">Ya tenes una cuenta?</string>
    <string name="auth_sign_in_title_2">Inicia Session</string>
    <string name="auth_sign_in_user">Usuario</string>
    <string name="auth_sign_in_pass">Contraseña</string>
    <string name="auth_sign_in_create_account">CREAR UNA CUENTA</string>
    <string name="auth_sign_in_error_title">Escribiste bien?</string>
    <string name="auth_sign_in_error_message">Chequea que el usuario y la contraseña sean correctos\nY volve a intentar</string>
    <string name="auth_sign_in_error_facebook_title">Ups!</string>
    <string name="auth_sign_in_error_facebook_message">El inicio de sesión con Facebook ha fallado.\nIntenta nuevamente mas tarde</string>
    <!-- ========================================== -->
    <!--                Dashboard                   -->
    <!-- ========================================== -->
    <!--              Toolbar Menu                  -->
    <string name="dashboard_toolbar_drawer_open">Nav Menu abierto</string>
    <string name="dashboard_toolbar_drawer_close">Nav Menu cerrado</string>
    <!--              Drawer Menu                   -->
    <string name="dashboard_nav_home">Inicio</string>
    <string name="dashboard_nav_account">Cuenta</string>
    <string name="dashboard_nav_search">Buscar productos</string>
    <string name="dashboard_nav_map">Mapa de actividades</string>
    <string name="dashboard_nav_qr">Lector QR</string>
    <string name="dashboard_nav_mall">Mis productos</string>
    <string name="dashboard_nav_sales">Ventas</string>
    <string name="dashboard_nav_purchases">Compras</string>
    <string name="dashboard_nav_log_out">Cerrar Session</string>
    <!--                  Home                      -->
    <string name="dashboard_home_earn_money">Queres ganar algo de dinero?</string>
    <string name="dashboard_home_sell">Publica algo</string>
    <!--                 Profile                    -->
    <string name="dashboard_profile_name">Nombre</string>
    <string name="dashboard_profile_surname">Apellido</string>
    <string name="dashboard_profile_email">Correo electronico</string>
    <string name="dashboard_profile_address">Direccion</string>
    <string name="dashboard_profile_name_error">"Debe ingresar un nombre"</string>
    <string name="dashboard_profile_surname_error">"Debe ingresar un apellido"</string>
    <string name="dashboard_profile_address_error">"Debe ingresar una direccion existente"</string>
    <!--                  Sales                     -->
    <string name="dashboard_sales_not_found">No se encontraron ventas!</string>
    <string name="dashboard_sales_list_item_units">Unidades: %1$s</string>
    <string name="dashboard_sales_list_item_total">Total: %1$s</string>
    <string name="dashboard_sales_list_item_status">Estado: %1$s</string>
    <string name="dashboard_sales_list_item_chat">Chat</string>
    <!--                Purchases                   -->
    <string name="dashboard_purchases_not_found">No se encontraron compras!</string>
    <string name="dashboard_purchases_list_item_units">Unidades: %1$s</string>
    <string name="dashboard_purchases_list_item_total">Total: %1$s</string>
    <string name="dashboard_purchases_list_item_status">Estado: %1$s</string>
    <string name="dashboard_purchases_list_item_chat">Chat</string>
    <string name="dashboard_purchases_list_item_rate">Calificar</string>
    <string name="dashboard_purchases_rate_title">Que te parecio el vendedor?</string>
    <!--                  Chat                      -->
    <string name="dashboard_chat_input_hint">Que te interesa saber…</string>
    <string name="dashboard_chat_list_item_me">Yo</string>
    <!-- ========================================== -->
    <!--                 Search                     -->
    <!-- ========================================== -->
    <string name="search_error_products_fetch_title">Tenes conexion a internet?</string>
    <string name="search_error_products_fetch_message">No se pudo cargar el listado de productos.\nChequea que tengas conexion y volve a intentar!</string>
    <string name="search_products_not_found">No hay productos!</string>
    <!--                  Menu                      -->
    <string name="search_menu_search">Buscar</string>
    <string name="search_menu_filter">Filtrar</string>
    <!--                 Filters                    -->
    <string name="search_filters_title">Filtrar</string>
    <string name="search_filters_price">Precio</string>
    <string name="search_filters_price_min">Min</string>
    <string name="search_filters_price_max">Max</string>
    <string name="search_filters_units">Unidades</string>
    <string name="search_filters_units_min">Min</string>
    <string name="search_filters_categories">Categorias</string>
    <string name="search_filters_payment_methods">Metodos de pago</string>
    <!-- ========================================== -->
    <!--             Product Details                -->
    <!-- ========================================== -->
    <string name="product_details_units">Stock: %1$s unidades</string>
    <string name="product_details_questions">Preguntas y Respuestas</string>
    <string name="product_details_question_answer">Respuesta</string>
    <string name="product_details_ask_question_title">Preguntanos</string>
    <string name="product_details_ask_question_hint">Que te gustaria saber?</string>
    <string name="product_details_ask_question_send">ENVIAR</string>
    <string name="product_details_ask_question_cancel">CANCELAR</string>
    <string name="product_details_select_question_title">Elegi la pregunta queres responder?</string>
    <string name="product_details_answer_question_title">Responde</string>
    <string name="product_details_answer_question_hint">Respuesta</string>
    <string name="product_details_answer_question_send">ENVIAR RESPUESTA</string>
    <!-- ========================================== -->
    <!--                 Publish                    -->
    <!-- ========================================== -->
    <string name="publish_section_images">Imagenes</string>
    <string name="publish_section_details">Detalles</string>
    <string name="publish_section_details_title">Titulo</string>
    <string name="publish_section_details_description">Descripcion</string>
    <string name="publish_section_details_price">Precio</string>
    <string name="publish_section_details_units">Stock</string>
    <string name="publish_section_details_address">Direccion</string>
    <string name="publish_section_categories">Categorias</string>
    <string name="publish_section_payment_methods">Metodos de pago</string>
    <string name="publish_list_add_item">Agregar\nImagen</string>
    <!-- ========================================== -->
    <!--               Check Out                    -->
    <!-- ========================================== -->
    <string name="check_out_price">Precio Unitario:\n%1$s</string>
    <string name="check_out_label_1">Ya casi es tuyo!</string>
    <string name="check_out_label_2">Ingresa los datos faltantes para concretar la compra</string>
    <string name="check_out_units_selection">Cuantas unidades queres pedir?</string>
    <string name="check_out_payment_selection">Como queres realizar el pago?</string>
    <string name="check_out_payment_selection_unique">Solo hay un metodo de pago disponible</string>
    <string name="check_out_payment_cash">Efectivo</string>
    <string name="check_out_payment_card">Tarjeta</string>
    <string name="check_out_card_dialog_title">Ingrese los datos de su tarjeta</string>
    <string name="check_out_confirm_dialog_title">Confirmacion</string>
    <string name="check_out_confirm_dialog_message">Desea realizar la transaccion?</string>
    <string name="check_out_confirm_dialog_positive">ACEPTAR</string>
    <string name="check_out_confirm_dialog_negative">CANCELAR</string>
    <!--                Card Form                   -->
    <string name="check_out_card_form_hint_card_number">Numero de tarjeta</string>
    <string name="check_out_card_form_hint_card_holder">Nombre y apellidos del titular</string>
    <string name="check_out_card_form_desc_security_code">Codigo de Seguridad</string>
    <string name="check_out_card_form_hint_cvv">CVV</string>
    <string name="check_out_card_form_desc_expiration">Fecha de vencimiento</string>
    <string name="check_out_card_form_confirm">CONFIRMAR</string>
    <!--                Delivery                    -->
    <string name="check_out_delivery_title">"Si queres incluir el envio"</string>
    <string name="check_out_delivery_description">Tu pedido tiene un costo de envio de:</string>
    <string name="check_out_delivery_confirm">REALIZAR ENVIO</string>
    <string name="check_out_delivery_cancel">NO ENVIAR</string>

    <!-- ========================================== -->
    <!--                 Widgets                    -->
    <!-- ========================================== -->
    <string name="widget_card_date_picker_title">Seleccione la fecha de vencimiento de su tarjeta</string>
    <string name="widget_card_date_picker_year">Año</string>
    <string name="widget_card_date_picker_month">Mes</string>
    <string name="widget_card_date_picker_confirm">Confirmar</string>

</resources>
