<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_grid"
            android:title="@string/dashboard_nav_home" />
        <item
            android:id="@+id/myAccount"
            android:icon="@drawable/ic_user_config"
            android:title="@string/dashboard_nav_account" />
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_search"
            android:title="@string/dashboard_nav_search" />
        <item
            android:id="@+id/mall"
            android:icon="@drawable/ic_mall"
            android:title="@string/dashboard_nav_mall" />
        <item
            android:id="@+id/sales"
            android:icon="@drawable/ic_money"
            android:title="@string/dashboard_nav_sales" />
        <item
            android:id="@+id/purchases"
            android:icon="@drawable/ic_purchase"
            android:title="@string/dashboard_nav_purchases" />
        <item
            android:id="@+id/closeSession"
            android:icon="@drawable/ic_power_off"
            android:title="@string/dashboard_nav_log_out" />
    </group>
</menu>