<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="android.support.constraint.ConstraintLayout">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cardList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        tools:listitem="@layout/check_out_card_list_item"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cardNumberInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardList">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/cardNumberInputEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:hint="@string/check_out_card_form_hint_card_number"
            android:inputType="numberDecimal"
            android:textSize="@dimen/check_out_card_form_input_font" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberInput">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nameInputEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:hint="@string/check_out_card_form_hint_card_holder"
            android:inputType="textPersonName"
            android:textSize="@dimen/check_out_card_form_input_font" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/cvvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/check_out_card_form_desc_security_code"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/check_out_card_form_label_font"
        app:layout_constraintBottom_toTopOf="@+id/cvvInput"
        app:layout_constraintLeft_toLeftOf="@+id/cvvInput"
        app:layout_constraintRight_toRightOf="@+id/cvvInput" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cvvInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/expirationDateInput"
        app:layout_constraintTop_toBottomOf="@+id/nameInput">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/cvvInputEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/check_out_card_form_hint_cvv"
            android:inputType="numberDecimal"
            android:textSize="@dimen/check_out_card_form_input_font" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/expirationDateInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/cvvInput"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cvvInput">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/expirationDateInputEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/check_out_card_form_desc_expiration"
            android:inputType="date"
            android:textSize="@dimen/check_out_card_form_input_font" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/confirmBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/check_out_card_form_confirm"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expirationDateInput" />

</merge>
