<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_user" />

        <ImageView
            android:id="@+id/editAvatarBtn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="40dp"
            android:alpha="0.35"
            android:background="@color/white"
            android:src="@drawable/ic_refresh"
            android:tint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@+id/avatar"
            app:layout_constraintLeft_toLeftOf="@+id/avatar"
            app:layout_constraintRight_toRightOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="@+id/avatar" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar"
            app:layout_constraintWidth_percent="0.75">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nameInputEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dashboard_profile_name"
                    android:inputType="textPersonName"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/surnameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/surnameInputEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dashboard_profile_surname"
                    android:inputType="textPersonName"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/emailInputEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/dashboard_profile_email" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/confirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="20dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_upload"
        app:backgroundTint="@color/colorPrimaryDark"
        app:fabSize="normal" />

    <ar.uba.fi.tallerii.comprameli.presentation.widget.view.ProgressOverlayView
        android:id="@+id/progressOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>